force-app/main/default/objects/synety__Synety_Campaign_Contact_Link__c/synety__Synety_Campaign_Contact_Link__c.object-meta.xml
<CustomObject>
    <description>this object is used to store the link between salesforce campaign contact object and synety dialer campaign contact object</description>
    <label>CloudCall Campaign Contact Link</label>
    <nameField>
        <label>SF Campaign Contact Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall Campaign Contact Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>