force-app/main/default/objects/synety__Synety_Campaign_Contact_Link__c/fields/synety__SF_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__SF_Contact_Id__c</fullName>
    <description>contact id or lead id</description>
    <externalId>true</externalId>
    <label>SF Contact Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>