force-app/main/default/objects/synety__Synety_Campaign_Contact_Link__c/fields/synety__Synety_Campaign_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Synety_Campaign_Contact_Id__c</fullName>
    <label>CloudCall Campaign Contact Id</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>