force-app/main/default/objects/synety__Synety_Campaign_Contact_Link__c/listViews/synety__All1.listView-meta.xml
<ListView>
    <fullName>synety__All1</fullName>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>